feat(DATA-1560): add gm to sx conversion.
* Update subscription model to get conversion flag
* Add Writter class to ingest SX / GM without circular dependency
* Update GeneralMessage Content model